--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,17 @@ application {
     mainClass = 'QuestingApplication'
 }
 
+jar {
+    duplicatesStrategy (DuplicatesStrategy.EXCLUDE)
+
+    manifest {
+        attributes('Main-Class':'QuestingApplication')
+    }
+    from {
+        configurations.runtimeClasspath.collect{it.isDirectory() ? it : zipTree(it)}
+    }
+}
+
 javafx {
     version = '17.0.2'
     modules = ['javafx.controls', 'javafx.fxml']
