--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,14 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    // mainModule = 'com.questingapp'
-    mainClass = 'QuestingApplication'
+    mainClass = 'Main'
 }
 
 jar {
     duplicatesStrategy (DuplicatesStrategy.EXCLUDE)
 
     manifest {
-        attributes('Main-Class':'QuestingApplication')
+        attributes('Main-Class':'Main')
     }
     from {
         configurations.runtimeClasspath.collect{it.isDirectory() ? it : zipTree(it)}
