--- a/db.config
+++ b/db.config
@@ -1,2 +1,2 @@
-jdbc.url=jdbc:sqlite:questing-app.db
-jdbc.url.test=jdbc:sqlite:questing-app-test.db
+jdbc.url=jdbc:sqlite:questing.db
+jdbc.url.test=jdbc:sqlite:questing-test.db
